# finance_agent

./: .gitignore  README.md  pyproject.toml
app/: .env.example  main.py
app/api/v1/: finance.py
app/common/: logger.py
app/finance_agent/: ai_classifier.py  config.py  db.py  deduplicator.py  finance_agent.py  image_parser.py  memory.py  models.py  parser.py  profile_manager.py  repository.py  sticker_agent.py  tables.py  tools.py
app/static/: finance.html
app/static/stickers/: README.md
docs/: v1_manual_test_plan.md
resources/: sample_bill.csv
